# resnet

./: .gitignore  notes.md  pyproject.toml  resnet.py  run.sh  run_res.py  train_res.py  verify_net.py
wandb/: latest-run
wandb/run-20240705_120058-kvrv3jwj/: run-kvrv3jwj.wandb
wandb/run-20240705_120058-kvrv3jwj/files/: config.yaml  wandb-metadata.json
wandb/run-20240705_120201-z9l46j29/: run-z9l46j29.wandb
wandb/run-20240705_120201-z9l46j29/files/: config.yaml  wandb-metadata.json
wandb/run-20240705_120255-h06j95sj/: run-h06j95sj.wandb
wandb/run-20240705_120255-h06j95sj/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/sweep-c22vjq6u/: config-h06j95sj.yaml
wandb/sweep-mxabuk0o/: config-kvrv3jwj.yaml
wandb/sweep-ybnqk4vz/: config-z9l46j29.yaml
