[tool.poetry]
name = "resnet34"
version = "0.1.0"
description = ""
authors = ["wsnell"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.1"
torchvision = "^0.18.1"
wandb = "^0.17.4"
tqdm = "^4.66.4"
numpy = "1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
